--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive: ^2.2.3
   flutter_bloc: ^8.1.1
   bloc: ^8.1.0
+  date_formatter: ^0.0.4
 
 dev_dependencies:
   flutter_test:
